Header call section, responsivity fix, final touches

--- a/css/site/variables.css
+++ b/css/site/variables.css
@@ -7,7 +7,9 @@
     --color-accent-dark-brown: #6D4C3D;
     --color-accent-black: #000000;
     --color-accent-dark-blue: #003F6A;
+    --color-accent-whiteish: #fbfbfbfb; 
     --color-header-bottom: #ffffff5e;
+    
 
     --shadow-light: rgba(0, 0, 0, 0.2) 0px 8px 12px;
     --shadow-strong: rgba(149, 157, 165, 0.2) 0px 16px 24px;
