--- a/css/site/styles.css
+++ b/css/site/styles.css
@@ -123,6 +123,10 @@ p {
     background-color: var(--color-ternary);
 }
 
+.bg-whiteish {
+    background-color: var(--color-accent-whiteish);
+}
+
 .bg-dark-blue-gradient {
     background: linear-gradient(100deg, var(--color-secondary) 0, var(--color-ternary) 100%) 0 0 no-repeat;
 }
@@ -140,12 +144,12 @@ p {
 }
 
 .carousel-control-prev {
-    left: -20px;
+    left: 0;
     width: 0%;
 }
 
 .carousel-control-next {
-    right: -20px;
+    right: 0;
     width: 0%;
 }
 
@@ -167,6 +171,11 @@ p {
     border-radius: 0;
 }
 
+.contact-button.call {
+    width: auto;
+    padding: 8px 16px;
+}
+
 .nav-link {
     font-weight: 600;
 }
@@ -180,8 +189,14 @@ p {
 }
 
 .mobile-nav-link:hover,
-.footer-nav-link:hover {
+.footer-nav-link:hover,
+a.black-text:hover {
+    text-decoration: none;
     color: var(--color-accent-dark-brown);
+}
+
+.contact-button.brown:hover {
+    color: var(--color-primary);
 }
 
 /*
@@ -288,7 +303,7 @@ header {
     height: 100%;
     position: fixed;
     right: 0;
-    top: 0;
+    top: 53px;
     z-index: 3;
     transition: right 0.3s ease-in-out;
     display: block;
@@ -303,20 +318,28 @@ header {
     justify-content: end;
     align-items: center;
     height: 80px;
-    padding-right: 31px;
+    padding-right: 16px;
 }
 
 #sidebar .nav-item {
-    border-bottom: 1px solid var(--color-accent-dark-brown);
+    border-bottom: 1px solid var(--color-accent-brown);
 }
 
 #dark-mobile-bg {
     width: 100%;
     height: 100%;
     position: fixed;
-    z-index: 1;
     background-color: rgba(0, 0, 0, 0.7);
-    /* transition: background-color 0.3s ease-in-out; */
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+}
+
+#dark-mobile-bg.active {
+    opacity: 1;
+    visibility: visible;
+    z-index: 1;
+    transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
 /*
@@ -327,7 +350,6 @@ header {
     padding-top: 160px;
 }
 
-
 #heroCarousel .carousel-item img {
     aspect-ratio: 1.35;
     object-fit: cover;
@@ -336,8 +358,8 @@ header {
 .floating-img {
     position: absolute;
     float: right;
-    bottom: -20px;
-    right: -20px;
+    bottom: -12px;
+    right: -12px;
     background-color: var(--color-primary);
     padding: 15px;
 }
@@ -420,6 +442,16 @@ header {
 
 .gallery-img {
     aspect-ratio: 1.17;
+    object-fit: cover;
+}
+
+.gallery-container::-webkit-scrollbar {
+    background: rgb(230, 230, 230);
+    width: 12px;
+}
+
+.gallery-container::-webkit-scrollbar-thumb {
+    background: var(--color-accent-brown);
 }
 
 /* gallery scrollbar stying */
@@ -472,10 +504,19 @@ input[type="checkbox"]:checked {
         height: 200px;
         margin-top: -40px;
     }
-}
 
-@media (min-width: 768px) {
+    .carousel-control-prev {
+        left: -20px;
+    }
     
+    .carousel-control-next {
+        right: -20px;
+    }
+
+    .floating-img {
+        bottom: -20px;
+        right: -20px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -544,8 +585,49 @@ input[type="checkbox"]:checked {
 }
 
 @media (min-width: 1200px) {
+    .container {
+        max-width: 1200px;
+    }
+
     .divider img {
         height: 526px;
         margin-top: -200px;
     }
+}
+
+.animate.pop {
+	animation-duration: 0.5s;
+	animation-name: animate-pop;
+	animation-timing-function: cubic-bezier(.26, .53, .74, 1.48);
+}
+
+.animate.pop:hover {
+    transform: scale(1.1, 1.1);
+    transition: transform ease-in 0.1s;
+}
+
+@keyframes animate-pop {
+	0% {
+		opacity: 0;
+		transform: scale(0.5, 0.5);
+	}
+  
+	100% {
+		opacity: 1;
+		transform: scale(1, 1);
+	}
+}
+
+.initially-hidden {
+	opacity: 0;
+}
+
+@keyframes initially-hidden {
+	0% {
+		opacity: 0;
+	}
+  
+	100% {
+		opacity: 1;
+	}
 }
